MangoBajito/tests/Lenguajes_2/Operacion/errors/15-desigualdad.mng
# Test 15: Error de operador de desigualdad (nie)
se_prende(){
	echar_cuento fun1(p1 : tas_claro) lanza un_coño {
		si_es_asi(p1){
			rescata("Check");
		};
	};

	culito n0 : tas_claro = fun1(Sisa) nie Sisa;
};